Closed Bug 364058 Opened 18 years ago Closed 18 years ago

[cocoa-cairo] css length unit 'ex' doesn't work on 10.3.9

Categories

(Core :: Graphics, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: stefanh, Assigned: masayuki)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

No matter how I use the ex length unit since the cairo switch it doesn't seem to work. This is also the reason for the broken Help content reported in bug 361510. I'll attach a testcase in a sec.
jftr: Mano couldn't reproduce it when I asked him, so I assume this is 10.3.9-only.
Keywords: testcase
I can confirm that the example loses with my recent (Dec 6, time to update) trunk build on 10.3.9, and wins on 10.4.
Keywords: regression
Taking, but I don't have the 10.3. I'll need the help.
Assignee: nobody → masayuki
Comment on attachment 250092 [details] [diff] [review]
Patch rv1.0

This patch gets the near value in 10.4. The metrics value and the text image height does not much. But I don't know the reason.
Attachment #250092 - Flags: review? → review?(vladimir)
Comment on attachment 250092 [details] [diff] [review]
Patch rv1.0

Testcase works for me with this patch applied (10.3.9, building with 10.3.0 sdk).
(In reply to comment #7)
> (From update of attachment 250092 [details] [diff] [review])
> Testcase works for me with this patch applied (10.3.9, building with 10.3.0
> sdk).
> 

Thank you for your test!
Status: NEW → ASSIGNED
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: