Bug 364058 [cocoa-cairo] css length unit 'ex' doesn't work on 10.3.9 r=vald